feat: Added appointment get endpoint, models etc, refactored listAvailableSlots service
